tests/compile-fail/stacked_borrows/buggy_split_at_mut.stderr
error: Undefined Behavior: trying to reborrow <1931> for Unique permission at alloc953[0x0], but that tag does not exist in the borrow stack for this location
  --> $DIR/buggy_split_at_mut.rs:19:10
   |
19 |     let (a, b) = safe::split_at_mut(&mut array, 0);
   |          ^
   |          |
   |          trying to reborrow <1931> for Unique permission at alloc953[0x0], but that tag does not exist in the borrow stack for this location
   |          this error occurs as part of a reborrow at alloc953[0x0..0x10]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `main` at $DIR/buggy_split_at_mut.rs:19:10

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

